--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ build
 *.dotCover
 /lib/Ninject/*.zip
 /lib/Ninject/*/**
+src/packages/Castle.Core.3.2.0/
+src/packages/LinFu.DynamicProxy.OfficialRelease.1.0.5/
+src/packages/Ninject.3.0.1.10/
