--- a/nuget-linfu/Ninject.Extensions.Interception.Linfu.3.2.2-async01.nuspec
+++ b/nuget-linfu/Ninject.Extensions.Interception.Linfu.3.2.2-async01.nuspec
@@ -1,23 +1,25 @@
 <?xml version="1.0"?>
 <package xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-    <id>Ninject.Extensions.Interception</id>
-    <version>3.0.1-async02</version>
+    <id>Ninject.Extensions.Interception.Linfu</id>
+    <version>3.2.2-async01</version>
     <authors>Ninject Project Contributors</authors>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
 	<licenseUrl>https://github.com/ninject/ninject.extensions.interception/raw/master/LICENSE.txt</licenseUrl>
-    <description>Interception extension for Ninject</description>
+    <description>Linfu Interception extension for Ninject</description>
     <summary></summary>
     <language>en-US</language>
 	<tags>Ninject ioc di interception aop dynamicproxy</tags>
 	<iconUrl>https://github.com/ninject/ninject/raw/master/logos/Ninject-Logo32.png</iconUrl>
 	<projectUrl>http://www.ninject.org</projectUrl>
     <dependencies>
-      <dependency id="Ninject" version="3.0.1.10" />
+      <dependency id="Ninject.Extensions.Interception" version="3.2.2-async01" />
+	  <dependency id="LinFu.DynamicProxy.OfficialRelease" version="1.0.5" />
+	  <dependency id="Ninject" version="(,3.3]" />
     </dependencies> 
   </metadata>
    <files>        
-        <file src="..\build\release\Ninject.Extensions.Interception.dll" target="lib\net45\Ninject.Extensions.Interception.dll" />
-		<file src="..\build\release\Ninject.Extensions.Interception.xml" target="lib\net45\Ninject.Extensions.Interception.xml" />        
+        <file src="..\build\release\Ninject.Extensions.Interception.LinFu.dll" target="lib\net45\Ninject.Extensions.Interception.LinFu.dll" />
+		<file src="..\build\release\Ninject.Extensions.Interception.LinFu.xml" target="lib\net45\Ninject.Extensions.Interception.LinFu.xml" />        
     </files>
 </package>
